[package]
name = "by_blocks"
version = "0.1.0"
authors = ["frederic wagner <frederic.wagner@imag.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon={git="https://github.com/wagnerf42/rayon", branch="tracing"}
# rayon="*"
fast-tracer={git="https://github.com/wagnerf42/fast-tracer"}
# fast-tracer={path="../fast-tracer"}
